--- a/elements.html
+++ b/elements.html
@@ -51,27 +51,29 @@
 								<hr />
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Graduate Teaching Assistant</h2>
-								  <img src="images/niu.jpg" alt="Northern Illinois University Logo" style="width: 275px; height: auto;">
 								</header>
 								<p>Northern Illinois University (Jan 2024 – Dec 2024)<br />
-								- Taught Decision Analysis to undergraduates, emphasizing quantitative methods for business decisions.<br />
-								- Assisted graduate students with Applied Business Analytics using SAS, focusing on statistical modeling and data analytics.</p>
+								- Guided students in applying forecasting models, optimization techniques, and quantitative analysis to solve business problems.
+								- Led Applied Business Analytics sessions using SAS, covering hypothesis testing, predictive analytics, and data transformation to enhance student proficiency in real-world data management.
+								- Reviewed student projects, facilitated review sessions, and collaborated with faculty to design data-driven assignments aligned with industry-relevant analytics and business intelligence applications.</p>
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Associate Business Analyst</h2>
-								  <img src="images/pfizer.jpg" alt="Pfizer Logo" style="width: 275px; height: auto;">
 								</header>
-								<p>Pfizer - Infosys (Aug 2021 – July 2023)<br />
-								- Conducted exploratory data analysis and regression modeling using Python, R, and SQL.<br />
-								- Designed analytics frameworks, enhancing customer segmentation accuracy and boosting conversion rates.</p>
+								<p>Infosys (Aug 2021 – July 2023)<br />
+								- Analyzed large datasets using SQL extracting insights, validating data integrity, and supporting data-driven decision-making. <br />Conducted data reconciliation and anomaly detection to ensure accurate reporting and business intelligence.
+								- Developed SQL-based data queries to extract and analyze structured datasets, leading to data-driven decisions for business operations.
+								- Automated business processes using Python and PEGA, reducing manual efforts and improving operational efficiency.
+								- Built interactive dashboards and KPI reports in Power BI to visualize insights on customer behavior and financial performance.
+								- Collaborated with stakeholders to optimize business processes, identifying inefficiencies and suggesting data-driven solutions. </p>
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Software Engineer Intern</h2>
-								  <img src="images/cognizant.jpg" alt="Cognizant Logo" style="width: 275px; height: auto;">
 								</header>
 								<p>Cognizant (April 2021 – July 2021)<br />
-								- Developed a finance application and customer churn prediction models, improving customer retention by 18%.<br />
-								- Refined complex SQL queries, enhancing database efficiency by 30% for multi-faceted data analysis tasks.</p>
+								- Created complex SQL queries for data transformation, cleansing, and validation, ensuring data integrity.
+								- Conducted exploratory data analysis (EDA) in basic Python, identifying trends and business opportunities. 
+								- Collaborated with business teams to create data reports and optimize reporting processes.</p>
 								<hr />
 
 
