--- a/elements.html
+++ b/elements.html
@@ -52,29 +52,36 @@
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Graduate Teaching Assistant</h2>
 								</header>
-								<p>Northern Illinois University (Jan 2024 – Dec 2024)<br />
-								- Guided students in applying forecasting models, optimization techniques, and quantitative analysis to solve business problems.
-								- Led Applied Business Analytics sessions using SAS, covering hypothesis testing, predictive analytics, and data transformation to enhance student proficiency in real-world data management.
-								- Reviewed student projects, facilitated review sessions, and collaborated with faculty to design data-driven assignments aligned with industry-relevant analytics and business intelligence applications.</p>
+								<p><strong>Northern Illinois University (Jan 2024 – Dec 2024)</strong></p>
+								<ul>
+ 								   <li>Guided students in applying forecasting models, optimization techniques, and quantitative analysis to solve business problems.</li>
+							           <li>Led Applied Business Analytics sessions using SAS, covering hypothesis testing, predictive analytics, and data transformation.</li>
+								   <li>Reviewed student projects, facilitated review sessions, and collaborated with faculty to design data-driven assignments aligned with industry-relevant analytics.</li>
+								</ul>
+
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Associate Business Analyst</h2>
 								</header>
-								<p>Infosys (Aug 2021 – July 2023)<br />
-								- Analyzed large datasets using SQL extracting insights, validating data integrity, and supporting data-driven decision-making. <br />Conducted data reconciliation and anomaly detection to ensure accurate reporting and business intelligence.
-								- Developed SQL-based data queries to extract and analyze structured datasets, leading to data-driven decisions for business operations.
-								- Automated business processes using Python and PEGA, reducing manual efforts and improving operational efficiency.
-								- Built interactive dashboards and KPI reports in Power BI to visualize insights on customer behavior and financial performance.
-								- Collaborated with stakeholders to optimize business processes, identifying inefficiencies and suggesting data-driven solutions. </p>
+								<p><strong>Infosys (Aug 2021 – July 2023)</strong></p>
+								<ul>
+								    <li>Analyzed large datasets using SQL extracting insights, validating data integrity, and supporting data-driven decision-making.</li>
+								    <li>Developed SQL-based data queries to extract and analyze structured datasets, leading to data-driven decisions for business operations.</li>
+								    <li>Automated business processes using Python and PEGA, reducing manual efforts and improving operational efficiency.</li>
+								    <li>Built interactive dashboards and KPI reports in Power BI to visualize insights on customer behavior and financial performance.</li>
+								    <li>Collaborated with stakeholders to optimize business processes, identifying inefficiencies and suggesting data-driven solutions.</li>
+								</ul>
+
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
 								  <h2>Software Engineer Intern</h2>
 								</header>
-								<p>Cognizant (April 2021 – July 2021)<br />
-								- Created complex SQL queries for data transformation, cleansing, and validation, ensuring data integrity.
-								- Conducted exploratory data analysis (EDA) in basic Python, identifying trends and business opportunities. 
-								- Collaborated with business teams to create data reports and optimize reporting processes.</p>
-								<hr />
+								<p><strong>Cognizant (April 2021 – July 2021)</strong></p>
+								<ul>
+								    <li>Created complex SQL queries for data transformation, cleansing, and validation, ensuring data integrity.</li>
+								    <li>Conducted exploratory data analysis (EDA) in basic Python, identifying trends and business opportunities.</li>
+								    <li>Collaborated with business teams to create data reports and optimize reporting processes.</li>
+								</ul>
 
 
 								<header class="major">
