--- a/generic.html
+++ b/generic.html
@@ -44,19 +44,18 @@
 									<span class="date"></span>
 									<h1>Chandra Mouli Vanga<br />
 									</h1>
-									<p>Associate Business Analyst</p>
+									<p>Data Analyst</p>
 								</header>
 								<div class="image main"><img src="images/prof.jpg" alt="" style="width: 700px; height: auto; display: block; margin: 0 auto;" />
 								</div>
-								<p>I am a dedicated professional with a strong passion for data analytics and information systems. Currently pursuing a Master of Science in Operations and Management Information Systems at Northern Illinois University, I have the privilege of working as a Graduate Teaching Assistant under <a href="https://www.linkedin.com/in/xinyan-cao-9993a43a/">Dr. Xinyan Cao</a>. In this role, I guide students through quantitative methods and advanced statistical techniques, fostering their understanding of decision-making and business analytics.
+								<p>I am a data-driven professional with a Master’s degree in Management Information Systems and a strong foundation in data analytics, statistical modeling, and business intelligence. I specialize in transforming complex datasets into clear, actionable insights that support decision-making and operational improvements.
 
 									</p>
 								<p>Prior to my master's, I gained two years of experience working as an Associate Business Analyst working for Pfizer, where I led exploratory data analyses, regression modeling, and the development of advanced analytics frameworks. My efforts improved customer segmentation accuracy by 40% and enhanced marketing strategies, leading to measurable growth in conversion rates.
 									
-									My professional journey began with an enriching internship at Cognizant during the final year of my undergraduate studies. There, I developed a finance application and implemented customer churn prediction models, boosting customer retention by 18% and significantly improving data reporting efficiency.
-									
+									My experience includes resolving data discrepancies, conducting root cause analysis, and automating data cleaning and reporting processes using tools such as SQL, Python, and R. I’ve worked extensively with exploratory data analysis (EDA), developed interactive dashboards in Tableau and Power BI, and delivered data-driven recommendations to cross-functional teams.
 								<p>
-									Through these experiences, I have cultivated expertise in statistical modeling, data visualization, and advanced analytics tools, fueling my aspiration to drive meaningful insights and impactful solutions in the field of analytics. sagittis. </p>
+									I’ve also supported <a href="https://www.linkedin.com/in/xinyan-cao-9993a43a/">Dr. Xinyan Cao</a> working as a graduate Assistant teaching and mentoring in analytics-focused environments, helping others understand statistical techniques and business applications of data. With hands-on experience in data visualization, process automation, and performance reporting, I’m passionate about using data to drive meaningful impact in fast-paced, insights-oriented roles. </p>
 							</section>
 
 
