--- a/generic.html
+++ b/generic.html
@@ -46,7 +46,7 @@
 									</h1>
 									<p>Data Analyst</p>
 								</header>
-								<div class="image main"><img src="images/prof.jpg" alt="" style="width: 700px; height: auto; display: block; margin: 0 auto;" />
+								<div class="image main"><img src="images/port.jpg" alt="" style="width: 700px; height: auto; display: block; margin: 0 auto;" />
 								</div>
 								<p>I am a data-driven professional with a Master’s degree in Management Information Systems and a strong foundation in data analytics, statistical modeling, and business intelligence. I specialize in transforming complex datasets into clear, actionable insights that support decision-making and operational improvements.
 
