--- a/elements.html
+++ b/elements.html
@@ -54,9 +54,9 @@
 								</header>
 								<p><strong>Northern Illinois University (Jan 2024 – Dec 2024)</strong></p>
 								<ul>
- 								   <li>Guided students in applying forecasting models, optimization techniques, and quantitative analysis to solve business problems.</li>
-							           <li>Led Applied Business Analytics sessions using SAS, covering hypothesis testing, predictive analytics, and data transformation.</li>
-								   <li>Reviewed student projects, facilitated review sessions, and collaborated with faculty to design data-driven assignments aligned with industry-relevant analytics.</li>
+ 								   <li>Delivered practical instruction and technical support for graduate-level courses in Applied Business Analytics with SAS, including advanced statistical modeling techniques like logistic regression, ANOVA, and decision trees.</li>
+							           <li>Led sessions on interpreting real-world datasets, improving student comprehension of data-driven decision-making using SAS.</li>
+								   <li>Guided undergraduate students in Decision Analysis, reinforcing the use of quantitative frameworks for evaluating business alternatives.</li>
 								</ul>
 
 								
@@ -65,11 +65,12 @@
 								</header>
 								<p><strong>Infosys (Aug 2021 – July 2023)</strong></p>
 								<ul>
-								    <li>Analyzed large datasets using SQL extracting insights, validating data integrity, and supporting data-driven decision-making.</li>
-								    <li>Developed SQL-based data queries to extract and analyze structured datasets, leading to data-driven decisions for business operations.</li>
-								    <li>Automated business processes using Python and PEGA, reducing manual efforts and improving operational efficiency.</li>
-								    <li>Built interactive dashboards and KPI reports in Power BI to visualize insights on customer behavior and financial performance.</li>
-								    <li>Collaborated with stakeholders to optimize business processes, identifying inefficiencies and suggesting data-driven solutions.</li>
+								    <li>Investigated and resolved escalated student loan service tickets by identifying root causes through data validation, analysis, and cross-functional collaboration.</li>
+								    <li>Leveraged SQL to extract, audit, and correct inconsistent data in servicing systems, ensuring data integrity and compliance with regulatory standards.</li>
+								    <li>Utilized Python and R for data cleaning, transformation, and exploratory data analysis (EDA), enabling faster resolution of recurring data issues and service requests..</li>
+								    <li>Developed visual dashboards and summaries highlighting issue trends, escalation volumes, and loan performance metrics to support management decision-making and operational improvements.</li>
+								    <li>Diagnosed system-level issues requiring code or logic fixes and partnered with engineering teams to implement long-term solutions.</li>
+								    <li>Documented recurring issues and standardized resolution workflows, improving team efficiency and supporting knowledge transfer across business units.</li>
 								</ul>
 
 								
@@ -78,9 +79,9 @@
 								</header>
 								<p><strong>Cognizant (April 2021 – July 2021)</strong></p>
 								<ul>
-								    <li>Created complex SQL queries for data transformation, cleansing, and validation, ensuring data integrity.</li>
-								    <li>Conducted exploratory data analysis (EDA) in basic Python, identifying trends and business opportunities.</li>
-								    <li>Collaborated with business teams to create data reports and optimize reporting processes.</li>
+								    <li>Assisted in analyzing customer account and transaction data using SQL and Excel, contributing to daily operational reporting for the student loan servicing team.</li>
+								    <li>Cleaned, validated, and organized large financial datasets to support business teams in identifying data discrepancies and improving resolution accuracy.</li>
+								    <li>Created ad hoc reports and visual summaries to track issue trends, helping senior analysts monitor service performance and customer escalations.</li>
 								</ul>
 
 
