--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="intro" style="line-height: 1.4;">
 					<h1>Chandra Mouli<br />Vanga</h1>
 					<p>
-					  I am a Graduate student pursuing Masters in Operations and Management Information Systems at 
+					  I am a Data Analyst with a Masters degree in Operations and Management Information Systems from 
 					  <a href="https://www.niu.edu/index.shtml">Northern Illinois University</a>.<br />
 					  With three years of experience in data analytics and business intelligence, skilled in leveraging Python, R, SQL, and Tableau,<br />
 					  I specialize in delivering actionable insights to solve business problems.
