--- a/elements.html
+++ b/elements.html
@@ -61,7 +61,7 @@
 
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
-								  <h2>Associate Business Analyst</h2>
+								  <h2>Data Analyst</h2>
 								</header>
 								<p><strong>Infosys (Aug 2021 – July 2023)</strong></p>
 								<ul>
@@ -75,7 +75,7 @@
 
 								
 								<header style="display: flex; align-items: center; justify-content: space-between;">
-								  <h2>Software Engineer Intern</h2>
+								  <h2>Analyst Trainee </h2>
 								</header>
 								<p><strong>Cognizant (April 2021 – July 2021)</strong></p>
 								<ul>
@@ -172,3 +172,4 @@
 
 	</body>
 </html>
+
