--- a/generic.html
+++ b/generic.html
@@ -51,7 +51,7 @@
 								<p>I am a data-driven professional with a Master’s degree in Management Information Systems and a strong foundation in data analytics, statistical modeling, and business intelligence. I specialize in transforming complex datasets into clear, actionable insights that support decision-making and operational improvements.
 
 									</p>
-								<p>Prior to my master's, I gained two years of experience working as an Associate Business Analyst, where I led exploratory data analysis, regression modeling, and the development of advanced analytics frameworks. My efforts improved customer segmentation accuracy by 40% and enhanced marketing strategies, leading to measurable growth in conversion rates.
+								<p>Prior to my master's, I gained two years of experience working as an Analyst, where I led exploratory data analysis, regression modeling, and the development of advanced analytics frameworks.
 									
 									My experience includes resolving data discrepancies, conducting root cause analysis, and automating data cleaning and reporting processes using tools such as SQL, Python, and R. I’ve worked extensively with exploratory data analysis (EDA), developed interactive dashboards in Tableau and Power BI, and delivered data-driven recommendations to cross-functional teams.
 								<p>
@@ -108,3 +108,4 @@
 
 	</body>
 </html>
+
